--- a/prompt.html
+++ b/prompt.html
@@ -19,41 +19,43 @@
         <div class="row">
             <div class="cols-sm-6">
                 <div class="panel panel-primary">
-
-                    <div class="panel-heading">
-                        <h1 class="panel-title">Question Form</h1>
-                    </div>
-                    <!--Beginning of Prompts-->
-                    <div class="panel-body">
-                        <!--Prompt to add question-->
-                        <div class="form-group">
-                            <label for="questionInput">Write the question here</label>
-                            <input class="form-control" name="question" id="questionInput" autofocus required
-                                placeholder="What is your favorite fruit?">
+                    <form>
+                        <div class="panel-heading">
+                            <h1 class="panel-title">Question Form</h1>
                         </div>
-                        <!--Prompt to add answer A-->
-                        <div class="form-group">
-                            <label for="answerA">Input answer for Character A</label>
-                            <input class="form-control" name="responseA" id="answerA" value="" placeholder="Apples">
+                        <!--Beginning of Prompts-->
+                        <div class="panel-body">
+                            <!--Prompt to add question-->
+                            <div class="form-group">
+                                <label for="questionInput">Write the question here</label>
+                                <input class="form-control" name="question" id="questionInput" autofocus required
+                                    placeholder="What is your favorite fruit?">
+                            </div>
+                            <!--Prompt to add answer A-->
+                            <div class="form-group">
+                                <label for="answerA">Input answer for Character A</label>
+                                <input class="form-control" name="responseA" id="answerA" value="" placeholder="Apples">
+                            </div>
+                            <!--Prompt to add answer B-->
+                            <div class="form-group">
+                                <label for="answerB">Input answer for Character B</label>
+                                <input class="form-control" name="responseB" id="answerB" value="" placeholder="Bananas">
+                            </div>
+                            <!--Prompt to add answer C-->
+                            <div class="form-group">
+                                <label for="answerC">Input answer for Character C</label>
+                                <input class="form-control" name="responseA" id="answerA" value="" placeholder="Oranges">
+                            </div>
+                            <!--Prompt to add answer D-->
+                            <div class="form-group">
+                                <label for="answerD">Input answer for Character D</label>
+                                <input class="form-control" name="responseA" id="answerA" value="" placeholder="Mangos">
+                            </div>
+                            <!---->
+                            <button type="submit" class="btn btn-default">Submit</button>
+                            <button type="submit" class="btn btn-default">Submit & Complete</button>
                         </div>
-                        <!--Prompt to add answer B-->
-                        <div class="form-group">
-                            <label for="answerB">Input answer for Character B</label>
-                            <input class="form-control" name="responseB" id="answerB" value="" placeholder="Bananas">
-                        </div>
-                        <!--Prompt to add answer C-->
-                        <div class="form-group">
-                            <label for="answerC">Input answer for Character C</label>
-                            <input class="form-control" name="responseA" id="answerA" value="" placeholder="Oranges">
-                        </div>
-                        <!--Prompt to add answer D-->
-                        <div class="form-group">
-                            <label for="answerD">Input answer for Character D</label>
-                            <input class="form-control" name="responseA" id="answerA" value="" placeholder="Mangos">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                        <button type="reset" class="btn btn-default">Reset</button>
-                    </div>
+                    </form>
                     <!--End of Prompts-->
 
                 </div>
