--- a/prompt.html
+++ b/prompt.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 
 <body>
@@ -39,12 +38,14 @@
                             <!--Prompt to add answer B-->
                             <div class="form-group">
                                 <label for="answerB">Input answer for Character B</label>
-                                <input class="form-control" name="responseB" id="answerB" value="" placeholder="Bananas">
+                                <input class="form-control" name="responseB" id="answerB" value=""
+                                    placeholder="Bananas">
                             </div>
                             <!--Prompt to add answer C-->
                             <div class="form-group">
                                 <label for="answerC">Input answer for Character C</label>
-                                <input class="form-control" name="responseA" id="answerA" value="" placeholder="Oranges">
+                                <input class="form-control" name="responseA" id="answerA" value=""
+                                    placeholder="Oranges">
                             </div>
                             <!--Prompt to add answer D-->
                             <div class="form-group">
@@ -53,7 +54,7 @@
                             </div>
                             <!---->
                             <button type="submit" class="btn btn-default">Submit</button>
-                            <button type="submit" class="btn btn-default">Submit & Complete</button>
+                            <button type="submit" class="btn btn-default" onclick="window.location.href='homePage.html';">Submit & Complete</button>
                         </div>
                     </form>
                     <!--End of Prompts-->
@@ -62,21 +63,6 @@
             </div>
         </div>
 
-        <!--Already submitted Questions and Responses-->
-        <div class="col-sm-6">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h1 class="panel-title">Submitted Questions/Responses</h1>
-                </div>
-
-                <!--Beginning of Submissions-->
-                <div class="panel-body">
-                    <div id="orderRow" data-prompts="checklist"></div>
-                </div>
-                <!--End of Submissions-->
-
-            </div>
-        </div>
 
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"
